[gd_scene load_steps=15 format=2]

[ext_resource path="res://nodes/entity/Enemies/EntityEnemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://sprites/enemies/spr_enemy_diving_phoenix.png" type="Texture" id=2]
[ext_resource path="res://scripts/entity/Enemy/EntityEnemy_Phoenix.gd" type="Script" id=3]

[sub_resource type="Shader" id=29]
code = "shader_type canvas_item;

uniform float color_palette_modifier : hint_range(0.0, 1.0) = 0.0;

uniform int numberOfColors : hint_range(1, 3);
uniform vec4 C1 : hint_color;
uniform vec4 C2 : hint_color;
uniform vec4 C3 : hint_color;


void fragment(){
	vec4 referenceColors[12];
	referenceColors[0] = C1;
	referenceColors[1] = C2;
	referenceColors[2] = C3;

	
	vec4 textureColor = texture(TEXTURE, UV);
	

	COLOR.rgb = mix(textureColor.rgb,referenceColors[int(floor(textureColor.r * float(numberOfColors)))].rgb,color_palette_modifier);
	COLOR.a = textureColor.a;

}"

[sub_resource type="ShaderMaterial" id=30]
resource_local_to_scene = true
shader = SubResource( 29 )
shader_param/color_palette_modifier = 0.0
shader_param/numberOfColors = 3
shader_param/C1 = Color( 0.34552, 0.796875, 0.766275, 1 )
shader_param/C2 = Color( 0.556863, 0.901961, 0.878431, 1 )
shader_param/C3 = Color( 0.803922, 0.945098, 1, 1 )

[sub_resource type="AtlasTexture" id=33]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 65, 64 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 2 )
region = Rect2( 130, 0, 65, 64 )

[sub_resource type="AtlasTexture" id=34]
atlas = ExtResource( 2 )
region = Rect2( 195, 0, 65, 64 )

[sub_resource type="AtlasTexture" id=35]
atlas = ExtResource( 2 )
region = Rect2( 65, 0, 65, 64 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 65, 64 )

[sub_resource type="SpriteFrames" id=4]
animations = [ {
"frames": [ SubResource( 33 ), SubResource( 33 ), SubResource( 2 ), SubResource( 2 ), SubResource( 34 ) ],
"loop": false,
"name": "Diving",
"speed": 6.0
}, {
"frames": [ SubResource( 35 ) ],
"loop": true,
"name": "Stun",
"speed": 5.0
}, {
"frames": [ SubResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="RectangleShape2D" id=32]
extents = Vector2( 14.5, 13 )

[sub_resource type="RectangleShape2D" id=31]
extents = Vector2( 17, 17 )

[sub_resource type="RectangleShape2D" id=36]
extents = Vector2( 18, 18 )

[node name="EntityEnemy_Diving_Phoenix" instance=ExtResource( 1 )]
script = ExtResource( 3 )
hp_max = 20
gravityenabled = false
enemy_reaction_time = 1.4

[node name="Sprite" parent="." index="0"]
material = SubResource( 30 )
frames = SubResource( 4 )
offset = Vector2( 7, -5 )

[node name="HealthBar" parent="Sprite" index="0"]
visible = false

[node name="CenterPoint" parent="Sprite" index="1"]
position = Vector2( 0, 1 )

[node name="VisibilityNotifier2D" parent="." index="1"]
position = Vector2( -3.5, 1 )
scale = Vector2( 7.95, 7.5 )

[node name="CollisionShape2D" parent="." index="2"]
position = Vector2( 1.5, 0 )
shape = SubResource( 32 )

[node name="Hurtbox" parent="." index="4"]
collision_mask = 16

[node name="CollisionShape2D" parent="Hurtbox" index="0"]
position = Vector2( 1, 1 )
shape = SubResource( 31 )

[node name="Hitbox" parent="." index="5"]
collision_layer = 4
damage = 4

[node name="CollisionShape2D" parent="Hitbox" index="0"]
shape = SubResource( 36 )

[node name="FireSpawner" type="Timer" parent="." index="8"]
process_mode = 0
wait_time = 0.03

[connection signal="timeout" from="FireSpawner" to="." method="_on_FireSpawner_timeout"]
[connection signal="timeout" from="reaction_time" to="." method="_on_reaction_time_timeout"]

[editable path="Hurtbox"]
[editable path="Hitbox"]
